# moodify

./: README.md
API/: README.md  requirements.txt
API/app/: database.py  extract_audio_features.py  main.py  ml_model.py  models.py  request_stats.py
DL/CNN/: CNN.ipynb  CNN_ordinary_spec.ipynb  RNN_MLP.ipynb  spectrogram_extractor.ipynb
DL/RNN_MLP/: audio_embeddings_extractor.ipynb  melspectrogram_extractor.ipynb
DL/Transformer/: Music_transformer.ipynb
EDA/: df_features_tsfel  df_tracks_meta
ML/: ML.ipynb
ML_nonlinear/: df_feature_emotions  df_metrics  df_metrics_v2  extract_emotion_features.ipynb  nonlin_models.ipynb  nonlin_models_with_emotions.ipynb
MLflow/: .gitignore  docker-compose.yaml  mlflow_catboost.ipynb  pyproject.toml
