[project]
name = "template-docker-mlflow-s3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.2",
    "catboost>=1.2.8",
    "mlflow>=2.15.1,<3.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "psutil>=7.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.8.0",
    "accelerate>=1.11.0",
    "transformers>=4.57.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "tensorflow>=2.21.0",
    "torchvision>=0.26.0",
    "ipykernel>=7.2.0",
    "optuna>=4.8.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "lime>=0.2.0.1",
    "ipython>=9.13.0",
]
